# rust-wasm-worker

./: .gitignore  Cargo.toml  README.md  wrangler.toml
.github/: README.md
.github/workflows/: rust.yml
src/: lib.rs
